<resources>
    <string name="app_name">ChapitChat</string>
    <string name="need_a_new_account">Need a new account ?</string>
    <string name="create_account">Create account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="this_is_main_page">This is main page</string>
    <string name="log_out">Log out</string>
    <string name="welcome_to_chapit_chat_app">Welcome to Chapit Chat App</string>
    <string name="already_have_account">already have account</string>
    <string name="login_to_your_account">Login to your Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hey_there_i_am_using_chapit_chap_app">Hey there, I am using Chapit Chap App</string>
    <string name="dispalay_name">Dispalay Name</string>
    <string name="change_status">Change Status</string>
    <string name="change_image">Change Image</string>
    <string name="decline_friend_request">DECLINE FRIEND REQUEST</string>
    <string name="send_friend_request">Send Friend request</string>
    <string name="current_user_status">Current User Status</string>
    <string name="total_friends">Total Friends</string>
    <string name="display_name">Display Name</string>
</resources>
