<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.mahija.teenchapit.chapitchat.ProfileActivity"
    android:id="@+id/profile_main_view">

    <de.hdodenhof.circleimageview.CircleImageView
        android:transitionName="profileImage"
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_displayName"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/batman" />

    <TextView
        android:transitionName="userName"
        android:id="@+id/profile_displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/display_name"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp" />


    <TextView
        android:transitionName="userStatus"
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_displayName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/current_user_status"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <TextView
        android:id="@+id/profile_totalFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/total_friends"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <Button
        android:id="@+id/profile_send_rqst_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_totalFriends"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorAccent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/send_friend_request"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <Button
        android:id="@+id/profile_decline_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_send_rqst_btn"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/decline_friend_request"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

</RelativeLayout>
