<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.mahija.teenchapit.chapitchat.SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/batman" />

    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/dispalay_name"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/settings_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_display_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/hey_there_i_am_using_chapit_chap_app"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <Button
        android:id="@+id/settings_change_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/change_image" />

    <Button
        android:id="@+id/settings_change_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_change_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:background="@color/colorAccent"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/change_status"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />
</RelativeLayout>
