<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mahija.teenchapit.chapitchat.StartActivity"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_already"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/welcome_to_chapit_chat_app"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/need_a_new_account" />

    <Button
        android:id="@+id/start_already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_reg_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/already_have_account"
        android:textColor="@android:color/white" />
</RelativeLayout>
